node-main/deps/v8/test/message/mjsunit/fail/regress/regress-1267172.out
*%(basename)s:6: SyntaxError: Function statements require a function name
0, function(){function(){ ; }(); ;
              ^^^^^^^^
SyntaxError: Function statements require a function name
